--- a/wegofin.css
+++ b/wegofin.css
@@ -90,8 +90,23 @@ h3 {
 .card:nth-child(5) {
   transform: translateY(-20px);
 }
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
   h3 {
     width: auto;
+  }
+} */
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 10vw;
+  }
+  h3 {
+    font-size: 5vw;
+  }
+  .card {
+    flex: 0 0 80%;
+    max-width: 80%;
+    padding: 10px;
+    margin: 0 5px;
   }
 }
