--- a/wegofin.css
+++ b/wegofin.css
@@ -54,6 +54,8 @@ h3 {
   overflow: hidden;
   text-align: center;
   color: #858585;
+  /* Remove translateY transformations */
+  transform: none;
 }
 .card-img {
   border-radius: 50%;
@@ -74,7 +76,6 @@ h3 {
   font-size: 20px;
   color: #d4d4d4;
 }
-/* Adjust positions for cards */
 .card:nth-child(1) {
   transform: translateY(-20px);
 }
@@ -90,17 +91,15 @@ h3 {
 .card:nth-child(5) {
   transform: translateY(-20px);
 }
-/* @media (max-width: 1024px) {
-  h3 {
-    width: auto;
-  }
-} */
+
 
 @media (max-width: 768px) {
   h1 {
     font-size: 10vw;
   }
   h3 {
+    width: 100%;
+
     font-size: 5vw;
   }
   .card {
