--- a/wegofin.css
+++ b/wegofin.css
@@ -108,7 +108,7 @@ h3 {
     padding: 10px;
     margin: 0 5px;
   }
-  .carousel{
+  /* .carousel{
     transform: scale(0.7) !important;
-  }
+  } */
 }
